--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
   sqflite: 2.3.2
   path_provider: 2.1.2
   scroll_to_index: 3.0.1
+  persistent_bottom_nav_bar: ^5.0.2
+  geolocator: ^11.0.0
+  intl: 0.19.0
   flutter: 
     sdk: flutter
-  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
