--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: 0.19.0
   flutter: 
     sdk: flutter
+  google_mobile_ads: ^4.0.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
